# dashboard-rust

./: Cargo.toml  LICENSE  README.md
db/: students.db
src/: database.rs  handlers.rs  main.rs  models.rs
templates/: index.html
